@@ -4,7 +4,8 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
-- Internationalize Before today operator.
+- Fixed i18n of "Before today" operator and
+  "x items matching your search terms.".
   [vincentfretin]
 
 
